--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.1.2",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "tailwind-merge": "^2.2.1",
@@ -36,6 +37,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
+    "msw": "^2.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
