--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.28.0",
     "@tanstack/react-table": "^8.13.2",
+    "@tosspayments/payment-widget-sdk": "^0.10.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
@@ -28,6 +30,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
